# Video_Conferencing

./: vercel.json
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  routes.py  sockets.py
frontend/: index.html  package.json  pnpm-lock.yaml  room.html  vite.config.js
frontend/css/: style.css
frontend/js/: main.js  room.js  socket.js  webrtc.js
