[project]
name = "video-conferencing-backend"
version = "0.1.0"
description = "Flask backend with Socket.IO for video conferencing signaling"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "flask-cors>=4.0.0",
    "python-socketio>=5.10.0",
    "eventlet>=0.35.0"
]
